--- a/views/sell.ejs
+++ b/views/sell.ejs
@@ -6,15 +6,16 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<style type="text/css">
 		body{
-			background-color: #4682B4;
+			background-color: #ffffff;
 		}
-		h3{
+		h1{
 			padding: auto;
 			text-align: center;
-			color: white;
+			color: #000000;
 			font-weight: normal;
-			padding-top: 150px;
+			padding-top: 70px;
 			font-size: 75px;
+			font-family: serif;
 		}
 		/*button{
 			float: left;
@@ -22,7 +23,10 @@
 			background-color: white;
 			height: 25px;
 		}*/
-		.yo{
+		button{
+			margin-left: 5px;
+		}
+		.row{
 			text-align: center;
 		}
 	</style>
@@ -38,45 +42,40 @@
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNav">
 	    <ul class="navbar-nav">
-	      <li class="nav-item active active">
-	        <a class="nav-link" href="/categories">Products <span class="sr-only">(current)</span></a>
+	      <li class="nav-item  ">
+	        <a class="nav-link" href="/seller/sell">Sell stuff<span class="sr-only">(current)</span></a>
 	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/subCategories">SubCategories</a>
+	      <li class="nav-item ">
+	        <a class="nav-link" href="/seller/complaint">Report Problem</a>
 	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/subSubCategories">SubSubCategories</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/features">Features</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/requests">Requests</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/complaints">Complaints</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/newProduct">New product</a>
-	      </li>
-	      <li class="nav-item active active">
-	        <a class="nav-link" href="/payment">Commision-Rates</a>
+	      <li class="nav-item ">
+	        <a class="nav-link" href="/seller/request">Request Product</a>
 	      </li>
 	    </ul>
 	    <ul class="navbar-nav ml-auto">
 	    	
-	    		<li class="nav-item active">
+	    		<li class="nav-item active ">
 	      			<a class="nav-link" href="/login">Login</a>
 	    		</li>
     		
-	    		<li class="nav-item active">
+	    		<li class="nav-item ">
 	      			<a class="nav-link" href="/logout">Logout</a>
 	    		</li>
 	    		
     	</ul>
 	  </div>
 	</nav>
-	<h3> User-Info will be available after sinking of users unit.</h3>
+	<h1 >Welcome to the WebStore</h1>
+	<br>
 	<!-- <a class="btn btn-primary" href="/new_blog" role="button">Create new blog</a> -->
+	<div class="row">
+	<div class="col"><a href="/seller/sell"><img src="https://www.brandcrowd.com/maker/asset/logo/cc2d070d-5c4b-4deb-916d-1f20c555a35e/image/logo?text=Sell%20A%20Product&v=2" alt="Sell A Product"></a>
+	</div>
+	
+	<div class="col"><a href="/seller/complaint"><img src="https://www.brandcrowd.com/maker/asset/logo/62382ca8-2cc6-44a6-aad0-0844ac224f99/image/logo?text=Report%20A%20Complaint&v=2" alt="Report A Complaint"></a></div>
+	
+	<div class="col"><a href="/seller/request"><img src="https://www.brandcrowd.com/maker/asset/logo/69a3a5ec-57aa-43d4-a8a6-07cc8d087cad/image/logo?text=Request%20New%20Product&v=2" alt="Request A Product"></a></div>
+</div>
 </body>
 </html>
+
