--- a/views/spareroom.ejs
+++ b/views/spareroom.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Deepansh's Store</title>
+	<title>WebStore</title> 	<link rel="shortcut icon" href="http://www.iconarchive.com/download/i87056/graphicloads/colorful-long-shadow/Cart.ico">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<style type="text/css">
@@ -35,7 +35,7 @@
 
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="/spareroom/">DEEPANSH'S STORE</a>
+	  <a class="navbar-brand" href="/spareroom/">WebStore</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -82,7 +82,7 @@
     	</ul>
 	  </div>
 	</nav>
-	<h1 >Welcome to the Deepansh's Store</h1>
+	<h1 >Welcome to the WebStore</h1>
 	<br>
 	<!-- <a class="btn btn-primary" href="/spareroom/new_blog" role="button">Create new blog</a> -->
 	<div class="yo">
