--- a/views/newSubSubCategory.ejs
+++ b/views/newSubSubCategory.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Deepansh's Store</title>
+	<title>WebStore</title> 	<link rel="shortcut icon" href="http://www.iconarchive.com/download/i87056/graphicloads/colorful-long-shadow/Cart.ico">
+	<link rel="shortcut icon" href="http://www.iconarchive.com/download/i87056/graphicloads/colorful-long-shadow/Cart.ico">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<style type="text/css">
@@ -10,8 +11,8 @@
 			padding-top: 50px;
 		}
 		body{
-			color: white;
-			background-color: #4682b4;
+			color: black;
+			background-color: #ffffff;
 		}
 		small{
 			color: white;
@@ -24,38 +25,35 @@
 
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="/">DEEPANSH'S STORE</a>
+	  <a class="navbar-brand" href="/"><img style="height:25px; padding:0; margin:0" src="http://www.iconarchive.com/download/i87056/graphicloads/colorful-long-shadow/Cart.ico"> WebStore</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNav">
 	    <ul class="navbar-nav">
-	      <li class="nav-item active active">
-	        <a class="nav-link" href="/categories">Products <span class="sr-only">(current)</span></a>
+	      <li class="nav-item  ">
+	        <a class="nav-link" href="/categories">Categories <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item active">
 	        <a class="nav-link" href="/subCategories">SubCategories</a>
 	      </li>
-	      <li class="nav-item active">
+	      <li class="nav-item ">
 	        <a class="nav-link" href="/subSubCategories">SubSubCategories</a>
 	      </li>
-	      <li class="nav-item active">
+	      <li class="nav-item ">
 	        <a class="nav-link" href="/features">Features</a>
 	      </li>
-	      <li class="nav-item active">
+	      <li class="nav-item ">
 	        <a class="nav-link" href="/requests">Requests</a>
 	      </li>
-	      <li class="nav-item active">
+	      <li class="nav-item ">
 	        <a class="nav-link" href="/complaints">Complaints</a>
 	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/newProduct">New products</a>
+	      <li class="nav-item ">
+	        <a class="nav-link" href="/newProduct">New product</a>
 	      </li>
-	      <li class="nav-item active active">
+	      <li class="nav-item  ">
 	        <a class="nav-link" href="/payment">Commision-Rates</a>
-	      </li>
-	      <li class="nav-item active active">
-	        <a class="nav-link" href="/smtp">SMTP details</a>
 	      </li>
 	    </ul>
 	    <ul class="navbar-nav ml-auto">
@@ -64,7 +62,7 @@
 	      			<a class="nav-link" href="/login">Login</a>
 	    		</li>
     		
-	    		<li class="nav-item active">
+	    		<li class="nav-item ">
 	      			<a class="nav-link" href="/logout">Logout</a>
 	    		</li>
 	    		
@@ -74,11 +72,11 @@
 	<!-- <a class="btn btn-primary" href="/new_blog" role="button">Create new blog</a> -->
 	<div>
 		<div class="container">
-			<form action="/newSubSubCategory" method="POST">
-			  <legend>CREATE NEW SUB-SUBCATEGORY</legend>
+			<form action="/newSubCategory" method="POST">
+			  <legend>CREATE NEW SUB-CATEGORY</legend>
 			  <div class="form-group">
-			    <label for="subSubCategory">Name</label>
-			    <input type="text" class="form-control" id="subSubCategory" aria-describedby="emailHelp" placeholder="subSubCategory" name="subSubCategory" >
+			    <label for="subCategory">Name</label>
+			    <input type="text" class="form-control" id="subCategory" aria-describedby="emailHelp" placeholder="Category" name="subCategory" >
 			  </div>
 			  <br>
 			  <button type="submit" class="btn btn-primary">Proceed</button>
