--- a/views/products.ejs
+++ b/views/products.ejs
@@ -5,32 +5,34 @@
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<style type="text/css">
+		img{
+			max-width: 200px;
+			max-height: 300px;
+		}
 		body{
-			background-color: #4682B4;
+			background-color: #ffffff;
+			color: #000000;
 		}
-		h3{
-			padding: auto;
-			text-align: center;
-			color: white;
+		.center{
+			margin-left: 400px;
+			margin-right: 200px;
+			margin-top: 30px;
+		}
+		a{
+			color:white;
+		}
+		h1{
+			text-decoration: underline;
+			font-size: 35px;
 			font-weight: normal;
-			padding-top: 150px;
-			font-size: 75px;
 		}
-		/*button{
-			float: left;
-			color: #4682b4;
-			background-color: white;
-			height: 25px;
-		}*/
-		.yo{
-			text-align: center;
+
+		.btn{
+			margin-left: 20px;
 		}
 	</style>
 </head>
 <body>
-
-
-
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	  <a class="navbar-brand" href="/"><img style="height:25px; padding:0; margin:0" src="http://www.iconarchive.com/download/i87056/graphicloads/colorful-long-shadow/Cart.ico"> WebStore</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,28 +41,10 @@
 	  <div class="collapse navbar-collapse" id="navbarNav">
 	    <ul class="navbar-nav">
 	      <li class="nav-item active active">
-	        <a class="nav-link" href="/categories">Products <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="/buyer/buy">Buy stuff<span class="sr-only">(current)</span></a>
 	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/subCategories">SubCategories</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/subSubCategories">SubSubCategories</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/features">Features</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/requests">Requests</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/complaints">Complaints</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/newProduct">New product</a>
-	      </li>
-	      <li class="nav-item active active">
-	        <a class="nav-link" href="/payment">Commision-Rates</a>
+	      <li class="nav-item ">
+	        <a class="nav-link" href="/buyer/complaint">Report problem</a>
 	      </li>
 	    </ul>
 	    <ul class="navbar-nav ml-auto">
@@ -69,14 +53,34 @@
 	      			<a class="nav-link" href="/login">Login</a>
 	    		</li>
     		
-	    		<li class="nav-item active">
+	    		<li class="nav-item ">
 	      			<a class="nav-link" href="/logout">Logout</a>
 	    		</li>
 	    		
     	</ul>
 	  </div>
 	</nav>
-	<h3> User-Info will be available after sinking of users unit.</h3>
-	<!-- <a class="btn btn-primary" href="/new_blog" role="button">Create new blog</a> -->
+	<div >
+		<h2><%= products[0].category %> > <%= products[0].subcategory %></h2>
+		<div class="container">
+	
+  	
+  	<% for(var i=0;i<products.length;i++){ %>
+  <div class="row">
+    <div class="col-lg-4 col-6 ">
+        <div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="<%= products[i].image %>" alt="A generic square placeholder image with rounded corners in a figure.">
+  <div class="card-body">
+    <h5 class="card-title">Name: <%= products[i].name %></h5>
+    <h5 class="card-title">Name: <%= products[i].price %></h5>
+    
+    <a href="/coming_soon" class="btn btn-primary">Buy</a>
+    <a href="#" class="btn btn-primary">Details</a>
+  </div>
+</div>
+    </div>
+    <% } %>
+	</div>
 </body>
 </html>
+
