--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Deepansh's Store</title>
+	<title>WebStore</title> 	<link rel="shortcut icon" href="http://www.iconarchive.com/download/i87056/graphicloads/colorful-long-shadow/Cart.ico">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<style type="text/css">
 		body{
-			background-color: #4682B4;
-			color: white;
+			background-color: #ffffff;
+			color: #000000;
 		}
-		h1{
-			padding: auto;
+		
+		.container-fluid{
+			background-color: #a6f3dc;
 			text-align: center;
-			color: white;
-			font-weight: normal;
-			padding-top: 50px;
-			font-size: 75px;
+			text:#ffffff;
+
 		}
+
 		/*button{
 			float: left;
 			color: #4682b4;
@@ -24,11 +24,14 @@
 			height: 25px;
 		}*/
 		.big{
-			font-size: 25px;
-			padding-left: 350px;
+			font-size: 20px;
+			padding-left: 50px;
 		}
 		.ye{
-			padding-left: 30px;
+			padding-left: 100px;
+		}
+		span{
+			font-weight: bold;
 		}
 	</style>
 </head>
@@ -37,54 +40,53 @@
 
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="/">DEEPANSH'S STORE</a>
+	  <a class="navbar-brand" href="/"><img style="height:25px; padding:0; margin:0" src="http://www.iconarchive.com/download/i87056/graphicloads/colorful-long-shadow/Cart.ico"> WebStore</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNav">
 	    <ul class="navbar-nav">
-	      <li class="nav-item active active">
-	        <a class="nav-link" href="/categories">Products <span class="sr-only">(current)</span></a>
+	      <li class="nav-item  ">
+	        <a class="nav-link" href="/categories">Categories <span class="sr-only">(current)</span></a>
 	      </li>
-	      <li class="nav-item active">
+	      <li class="nav-item ">
 	        <a class="nav-link" href="/subCategories">SubCategories</a>
 	      </li>
-	      <li class="nav-item active">
+	      <li class="nav-item ">
 	        <a class="nav-link" href="/subSubCategories">SubSubCategories</a>
 	      </li>
-	      <li class="nav-item active">
+	      <li class="nav-item ">
 	        <a class="nav-link" href="/features">Features</a>
 	      </li>
 	      <li class="nav-item active">
 	        <a class="nav-link" href="/requests">Requests</a>
 	      </li>
-	      <li class="nav-item active">
+	      <li class="nav-item ">
 	        <a class="nav-link" href="/complaints">Complaints</a>
 	      </li>
-	      <li class="nav-item active">
+	      <li class="nav-item ">
 	        <a class="nav-link" href="/newProduct">New products</a>
 	      </li>
-	      <li class="nav-item active active">
+	      <li class="nav-item  ">
 	        <a class="nav-link" href="/payment">Commision-Rates</a>
-	      </li>
-	      <li class="nav-item active active">
-	        <a class="nav-link" href="/smtp">SMTP details</a>
 	      </li>
 	    </ul>
 	    <ul class="navbar-nav ml-auto">
 	    	
-	    		<li class="nav-item active">
+	    		<li class="nav-item ">
 	      			<a class="nav-link" href="/login">Login</a>
 	    		</li>
     		
-	    		<li class="nav-item active">
+	    		<li class="nav-item ">
 	      			<a class="nav-link" href="/logout">Logout</a>
 	    		</li>
 	    		
     	</ul>
 	  </div>
 	</nav>
-	<h1 >Requests</h1>
+	<div class="container-fluid">
+			<h1 class="display-4"  >Requests </h1>
+			</div>
 	<br>
 	<!-- <a class="btn btn-primary" href="/new_blog" role="button">Create new blog</a> -->
 	<div class="yo">
@@ -94,34 +96,35 @@
 					 
 				<p>
 					<%=i%>).
-					User: <%=requests[i-1].user%>
+					<span>User:</span> <%=requests[i-1].user%>
 					<div class="ye">
-						Description: <%=requests[i-1].description%>
+						<span>Description:</span> <%=requests[i-1].description%>
 					</div>
 					
 					
 					<div class="ye">
-						Product: <%=requests[i-1].category%>
+							<span>Product:</span> <%=requests[i-1].category%>
 					</div>
 					<div class="ye">
-						Category: <%=requests[i-1].subCategory%>
+							<span>Category:</span><%=requests[i-1].subCategory%>
 					</div>
 					<div class="ye">
-						SubCategory: <%=requests[i-1].subSubCategory%>
+							<span>SubCategory:</span> <%=requests[i-1].subSubCategory%>
 					</div>
 					<div class="ye">
-						Features: <%=requests[i-1].features%>
+							<span>Features:</span> <%=requests[i-1].features%>
 					</div>
 					<div class="ye">
-						Options: <%=requests[i-1].options%>
+							<span>Options:</span> <%=requests[i-1].options%>
 					</div>
 				</p>
 				<div class="ye">
-					<a href="/requests/<%=requests[i-1]._id%>/create" class="btn btn-primary" role="button">Accept</a>
+					<a href="/requests/<%=requests[i-1]._id%>/create" class="btn btn-success" role="button">Accept</a>
 					<a href="/requests/<%=requests[i-1]._id%>/delete" class="btn btn-danger" role="button">Delete</a>
 					
 				</div>
 			</div>
+			<br>
 		<%}%>
 	</div>
 </body>
