--- a/views/smtp.ejs
+++ b/views/smtp.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Deepansh's Store</title>
+	<title>WebStore</title> 	<link rel="shortcut icon" href="http://www.iconarchive.com/download/i87056/graphicloads/colorful-long-shadow/Cart.ico">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<style type="text/css">
@@ -42,7 +42,7 @@
 
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="/">DEEPANSH'S STORE</a>
+	  <a class="navbar-brand" href="/"><img style="height:25px; padding:0; margin:0" src="http://www.iconarchive.com/download/i87056/graphicloads/colorful-long-shadow/Cart.ico"> WebStore</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -71,9 +71,6 @@
 	      </li>
 	      <li class="nav-item active active">
 	        <a class="nav-link" href="/payment">Commision-Rates</a>
-	      </li>
-	      <li class="nav-item active active">
-	        <a class="nav-link" href="/smtp">SMTP details</a>
 	      </li>
 	    </ul>
 	    <ul class="navbar-nav ml-auto">
