--- a/views/step2.ejs
+++ b/views/step2.ejs
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>WebStore</title> 	<link rel="shortcut icon" href="http://www.iconarchive.com/download/i87056/graphicloads/colorful-long-shadow/Cart.ico">
-	<link rel="shortcut icon" href="http://www.iconarchive.com/download/i87056/graphicloads/colorful-long-shadow/Cart.ico">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<style type="text/css">
@@ -13,13 +12,13 @@
 		body{
 			color: #000000;
 			background-color: #ffffff;
-
-		
-		
 		}
 		small{
 			color: white;
 			text-decoration: underline;
+		}
+		.blank{
+			display: none;
 		}
 	</style>
 </head>
@@ -35,28 +34,13 @@
 	  <div class="collapse navbar-collapse" id="navbarNav">
 	    <ul class="navbar-nav">
 	      <li class="nav-item active active">
-	        <a class="nav-link" href="/categories">Categories <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="/seller/sell">Sell stuff<span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item active">
-	        <a class="nav-link" href="/subCategories">SubCategories</a>
+	        <a class="nav-link" href="/seller/complaint">Report Problem</a>
 	      </li>
 	      <li class="nav-item active">
-	        <a class="nav-link" href="/subSubCategories">SubSubCategories</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/features">Features</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/requests">Requests</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/complaints">Complaints</a>
-	      </li>
-	      <li class="nav-item active">
-	        <a class="nav-link" href="/newProduct">New product</a>
-	      </li>
-	      <li class="nav-item active active">
-	        <a class="nav-link" href="/payment">Commision-Rates</a>
+	        <a class="nav-link" href="/seller/request">Request Product</a>
 	      </li>
 	    </ul>
 	    <ul class="navbar-nav ml-auto">
@@ -72,20 +56,35 @@
     	</ul>
 	  </div>
 	</nav>
-	<!-- <a class="btn btn-primary" href="/new_blog" role="button">Create new blog</a> -->
 	<div>
 		<div class="container">
-			<form action="/newCategory" method="POST">
-			  <legend>CREATE NEW CATEGORY</legend>
+			<form action="/step3" method="POST">
+			  <legend>DESCRIBE YOUR PRODUCT</legend>
 			  <div class="form-group">
-			    <label for="category">Category</label>
-			    <input type="text" class="form-control" id="category" aria-describedby="emailHelp" placeholder="Category" name="category" >
+			    <label for="category" >Category</label>
+			    <input type="text" class="form-control" id="category" aria-describedby="emailHelp" placeholder="Category" name="category" value="<%=category.name%>" >
 			  </div>
-			  <br>
-			  <button type="submit" class="btn btn-success">Proceed</button>
-			</form>
+			  <div class="form-group">
+			    <label for="category" >Subcategory</label>
+			    <input type="text" class="form-control" id="category" aria-describedby="emailHelp" placeholder="Category" name="subcategory" value="<%=sub.name%>" >
+			  </div>
+			  <div class="form-group">
+			    <label for="subSubCategorySelected">Subsubcategory</label>
+			    
+			    <select name="subsub" class="form-control" id="subSu
+			    bCategorySelected" >
+			    	<option value="none">Pick a subSubCategory!</option>
+				    <% for(var i=0;i<sub.subCategories.length;i++){ %>
+				    	<option value="<%=sub.subCategories[i]._id%>"><%=sub.subCategories[i].name%></option>
+				    <%}%>
+				</select>
+			  </div>
+			  
+			<br>
+			  <button type="submit" class="btn btn-primary">Submit</button>
+			  </div>
 		</div>
 	</div>
+	<script type="text/javascript" src="/js/.js"></script>
 </body>
 </html>
-
